; ModuleID = '/home/carl/AnghaBench/kphp-kdb/mc-proxy/extr_mc-proxy-merge-extension.c_generate_new_key.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/mc-proxy/extr_mc-proxy-merge-extension.c_generate_new_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mc_proxy_merge_functions = type { i32 (i8*, i8*, i32, i8*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @generate_new_key(i8* %0, i8* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.mc_proxy_merge_functions*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = call %struct.mc_proxy_merge_functions* (...) @get_extension_functions()
  store %struct.mc_proxy_merge_functions* %10, %struct.mc_proxy_merge_functions** %9, align 8
  %11 = load %struct.mc_proxy_merge_functions*, %struct.mc_proxy_merge_functions** %9, align 8
  %12 = getelementptr inbounds %struct.mc_proxy_merge_functions, %struct.mc_proxy_merge_functions* %11, i32 0, i32 0
  %13 = load i32 (i8*, i8*, i32, i8*)*, i32 (i8*, i8*, i32, i8*)** %12, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load i8*, i8** %8, align 8
  %18 = call i32 %13(i8* %14, i8* %15, i32 %16, i8* %17)
  ret i32 %18
}

declare dso_local %struct.mc_proxy_merge_functions* @get_extension_functions(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
